--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_NAME = 'erp_integration' 
-DB_USER = 'ezzah'
+DB_USER = 'erp_middleware'
 DB_PORT = 5432
 DB_PASSWORD = 'afm01'
 DB_HOST = 'localhost'
